# bakeoff

./: .env.example  .gitignore  CLAUDE.md  README.md  THOUGHTS.html  THOUGHTS.md  pyproject.toml
agno/: DIAGRAM.md  README.md  chat_service.py  member_prediction_agent.py  model_selection_agent.py  mql_agent.py  orchestration_team.py  server.py  vena_tools.py
agno/data/: sessions.db
langgraph/: DIAGRAM.md  README.md  chat_service.py  graph.py  nodes.py  server.py  state.py  tool_calls.py
notebooks/: code_interpreter.ipynb  dynamic_sessions.ipynb  prompt_chaining.ipynb
openai-agents/: DIAGRAM.md  README.md  chat_service.py  member_prediction_agent.py  mql_agent.py  orchestration_agent.py  server.py  vena_tools.py
semantic-kernel/: DIAGRAM.md  README.md  chat_service.py  member_prediction_agent.py  model_query_plugin.py  mql_agent.py  orchestration_agent.py  server.py  vena_client.py
utils/: __init__.py  vena_client.py
